# OpenCV-NDK

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/lqfang/face/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lqfang/face/: MainActivity.java  PreviewActivity.java
app/src/main/java/com/lqfang/face/opengl/: CameraOverlap.java  EGLUtils.java  GLBitmap.java  GLFrame.java  GLFramebuffer.java  GLPoints.java  GLRect.java  ShaderUtils.java
app/src/main/java/com/lqfang/face/utils/: AppUtils.java
app/src/main/jni/: CMakeLists.txt  native.cpp
app/src/main/res/layout/: activity_main.xml  activity_preview.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/lqfang/face/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
sdk/: .gitignore  build.gradle
